<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- bg orange -->
        <LinearLayout
            android:id="@+id/bg_orange"
            android:layout_width="425dp"
            android:layout_height="155dp"
            android:background="@color/colorOrange"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/logo_white_mini" />
        </LinearLayout>

        <!-- Registration -->
        <TextView
            android:id="@+id/registration_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:text="@string/registration"
            android:textAppearance="@style/registration" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="@string/username"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/user"
            android:hint="Username :"
            android:shadowRadius="10" />

        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="@string/birthday"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/agenda"
            android:hint="Date :"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="41dp"
            android:layout_height="17dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/email"
            android:hint="Email :"
            android:inputType="textEmailAddress"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/password"
            android:textAppearance="@style/password" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20.5dp"
                android:layout_marginEnd="39.5dp"
                android:background="@drawable/rectangle"
                android:hint="Password :"
                android:inputType="textPassword"
                android:shadowRadius="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:hint="Confirm password :"
            android:inputType="textPassword"
            android:shadowRadius="10" />

        <TextView
            android:id="@+id/adresse_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/adress"
            android:textAppearance="@style/adress" />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/map"
            android:hint="Your adresse :"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/phone"
            android:textAppearance="@style/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/phone"
            android:hint="+216 xxxxxxxx"
            android:shadowRadius="10"

            />

        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:background="@drawable/rectanglelogin"
            android:text="Register"
            android:onClick="Register"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</ScrollView>