<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_empty_01"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="258dp"
            android:layout_height="184dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/logo_white_mini" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/booksbib" />


        <TextView
            android:id="@+id/email_txt"
            android:layout_width="41dp"
            android:layout_height="17dp"
            android:layout_marginLeft="20.5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="355.5dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:background="@drawable/rectangle"
            android:hint="Email :"
            android:shadowRadius="10"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="30.5dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:background="@drawable/rectangle"
            android:hint="Password :"
            android:shadowRadius="10"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:text="Login"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:elevation="20dp"
            android:onClick="Login"
            android:background="@drawable/rectanglelogin"
            />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <!-- Forgot password? -->
            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_pass"
                android:fontFamily="@font/montserratregular"
                android:textAlignment="center"
                android:onClick="showForgotPassword"
                android:clickable="true"
                android:textAppearance="@style/forgot_pass" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_new_account"
                android:fontFamily="@font/montserratregular"
                android:textAlignment="center"
                android:clickable="true"
                android:onClick="showRegister"
                android:textAppearance="@style/create_new_account" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>