<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".UpdateBookActivity">

    <LinearLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- bg orange -->
        <LinearLayout
            android:id="@+id/bg_orange"
            android:layout_width="425dp"
            android:layout_height="155dp"
            android:background="@color/colorOrange"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/logo_white_mini" />
        </LinearLayout>

        <!-- Registration -->
        <TextView
            android:id="@+id/registration_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:text="@string/UpdateBook"
            android:textAppearance="@style/registration" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Title :"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/title"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@mipmap/openbook"
            android:hint="Title :"
            android:shadowRadius="10" />
        <TextView
            android:id="@+id/author_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Author :"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/author"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/user"
            android:hint="Title :"
            android:shadowRadius="10" />
        <TextView
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Category :"
            android:textAppearance="@style/username" />
        <Spinner
            android:id="@+id/category"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/user"
            android:shadowRadius="10"
            android:entries="@array/category__arrays"
            android:prompt="@string/category__prompt"/>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Status :"
            android:textAppearance="@style/username" />
        <Spinner
            android:id="@+id/status"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/user"
            android:shadowRadius="10"
            android:entries="@array/status__arrays"
            android:prompt="@string/status__prompt"/>
        <TextView
            android:id="@+id/language_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Langage :"
            android:textAppearance="@style/username" />
        <Spinner
            android:id="@+id/language"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@mipmap/user"
            android:shadowRadius="10"
            android:entries="@array/language__arrays"
            android:prompt="@string/language__prompt"/>


        <TextView
            android:id="@+id/visible_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:text="Show Book :"
            android:textAppearance="@style/username" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_gravity="left"
            android:text="Visible"
            android:textColor="@color/colorWhite"
            android:checked="false"
            />
        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="Price :"
            android:visibility="invisible"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/price"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@mipmap/money"
            android:hint="Price :"
            android:visibility="invisible"
            android:shadowRadius="10" />
        <ImageView
            android:id="@+id/bookimage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            />
        <Button
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:background="@drawable/rectanglelogin"
            android:text="Choose your book image"
            android:onClick="Choose"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/UpdateBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="39.5dp"
            android:background="@drawable/rectanglelogin"
            android:text="Update Your Book"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</ScrollView>